# OPNware

./: README.md  ansible.cfg  config.yml  index.html  inventory  meta.conf
.github/: dependabot.yml
.github/assets/: build-matrix.py  create-dir-index.py  create-manifest.py  create-packagesite-info.py  create-service.py  pkg-tool.py  pkg-update-matrix.py  pkg_tool.py  pyproject.toml  redistribute-pkg.py  requirements.txt  upgrade-pkg.py  upgrade_pkgs.py
.github/workflows/: auto-rebase-prs.yml  build_adguard.yml  build_caddyv2.yml  build_dhcp-client-widget.yml  build_pkg_123.yml  build_upsnap.yml  dependabot-automation.yml  generate_workflow_caller.yml  main.yml  pkg_workflow_caller.yml  update.yml  update_workflow_caller.yml  workflow_caller.yml
FreeBSD:14:amd64/: index.html
FreeBSD:14:amd64/latest/: index.html  packagesite.pkg
pkg-src/adguard/: build_pkg.yml  config.yml
pkg-src/adguardhome/: build_pkg.yml  config.yml
pkg-src/caddyv2/: build_pkg.yml  config.yml
pkg-src/dhcp-client-widget/: build_pkg.yml
pkg-src/nmap/: build_pkg.yml  config.yml
pkg-src/pkg_123/: build_pkg.yml
pkg-src/speedtest-go/: build_pkg.yml  config.yml
pkg-src/traefik/: build_pkg.yml  config.yml
pkg-src/upsnap/: build_pkg.yml  config.yml
pkg-tool/: pkg_tool.py  pyproject.toml  requirements.txt
pkgs/adguardhome/: build.sh  build_pkg.yml  config.yml
pkgs/blockly/: build_pkg.yml  config.yml
pkgs/blocky/: build.sh  build_pkg.yml  config.yml
pkgs/btop/: build.sh  build_pkg.yml  config.yml
pkgs/caddy/: build.sh  build_pkg.yml  (+1 more)
service_templates/: default.jinja
(+52 files in other folders)
