[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-tool"
version = "0.1.0"
description = "FreeBSD Custom Package Repository CLI Tools"
authors = [
    { name = "Nils Stein", email = "github.nstein@mailbox.org" }
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
pkg-tool = "pkg_tool:main"
